<resources>
  <string name="app_name">Recipie</string>
  <string name="splash_screen_text">Start your exciting food tour</string>
  <string name="splash_get_started">Get started</string>
  <string name="splash_sign_in">Sign in</string>
  <string name="username">Email/Username</string>
  <string name="password">Password</string>
  <string name="submit">Submit</string>
  <string name="login_via_facebook">Login via Facebook</string>
  <string name="login_via_google">Login via Google</string>
  <string name="forgot_password"><u>Forgot password?</u></string>
  <string name="email">Email</string>
  <string name="already_registered_sign_in"><u>Already registered? Sign in.</u></string>
  <string name="not_registered_yet_create_an_account_now"><u>Not registered yet? Create an account now.</u></string>
  <string name="search_recipes">Search recipes</string>
  <string name="add_your_recipe">Add your recipe</string>
  <string name="favorite_recipes">Favorite recipes</string>
  <string name="settings">Settings</string>
  <string name="log_out">Logout</string>
  <string name="information">Information</string>
  <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla finibus mauris sed leo finibus, at feugiat nibh scelerisque. In ac massa at metus tincidunt eleifend. Donec pretium nisl eleifend, feugiat ante in, facilisis libero. Aenean sagittis sed ipsum in pellentesque. Duis eu arcu non purus fringilla pulvinar. Pellentesque pharetra posuere ex id ullamcorper. Curabitur suscipit ornare bibendum. Quisque viverra lacus a condimentum gravida</string>
  <string name="type_recipe_name_here">Type recipe name here...</string>
</resources>
